# webml-polyfill

./: .babelrc  .gitignore  .gitmodules  .travis.yml  README.md  appveyor.yml  build.js  gh-pages.md  index.html  package-lock.json  package.json  sw.js  test-ci.js  tfjsWasmCopy.js  travis-ci.js  tsconfig.json  webpack.config.js
.circleci/: config.yml
api/: explainer.md
benchmark/: README.md  index.html  index.js  main.js  posenetConfig.json  ui.js  utils.js  utils_ea.js  utils_em.js  utils_fld.js  utils_ic.js  utils_od.js  utils_sd.js  utils_sr.js  utils_ss.js
benchmark/resources/: utils.js  utils_ea.js  utils_ic.js  utils_sd.js  utils_sr.js
docs/: api.md  native_mapping.md  supported_models.md  supported_ops.md  webml.idl
examples/: index.html  model.html
examples/Inception_V3/: Inception_V3.js  README.md  TfLiteModelUtils.js  index.html  utils.js
examples/asr_sample/: README.md  index.html  main.js  ui.js  utils.js
examples/deeplab/: DeepLabImporter.js  DrawOutputs.js  PostProcessor.js  SegMapColorizer.js  camera.html  index.html  main.js  style.css  utils.js
examples/emotion_analysis/: DrawOutput.js  EmotionAnalysisExample.js  README.md  camera.html  emotionAnalysisExample.js  index.html  main.js  ui.js  utils.js
examples/face_landmark_detection/: README.md  camera.html  index.html
examples/face_recognition/: DrawOutput.js  FaceRecognitionExample.js  README.md  faceRecognitionExample.js  index.html  main.js  ui.js  utils.js
examples/facial_landmark_detection/: DrawOutput.js  FacialLandmarkDetectionExample.js  README.md  camera.html  facialLandmarkDetectionExample.js  index.html  main.js  ui.js  utils.js
examples/image_classification/: ImageClassificationExample.js  ImageClassificationOpenCVRunner.js  ImageClassificationOpenVINORunner.js  ImageClassificationRunner.js  ImageClassificationWebNNRunner.js  README.md  camera.html  imageClassificationExample.js  imageClassificationRunner.js  index.html  main.js  ui.js  utils.js
examples/image_classification_onnx/: OnnxModelImporter.js  README.md  camera.html  index.html  main.js  utils.js
examples/image_classification_opencv/: ImageClassificationExample.js  index.html  main.js
examples/image_classification_tflite/: ImageClassificationModel.js  README.md  TfLiteModelUtils.js  camera.html  camera.js  index.html  main.js  utils.js
examples/lenet/: README.md  index.html  lenet.js  main.js  pen.js
examples/mobilenet/: GPU_index.html  GPU_main.js  Inception_V3.js  MobileNet.js  README.md  camera.html  (+5 more)
netron/: README.md  index.html  onnx.js
src/: WebMLPolyfill.js
src/nn/wasm/src/: CMakeLists.txt  README.md
src/nn/wasm/src/bind/src/: binding.cpp
src/nn/wasm/src/bind/test/: index.html  operations.js
src/nn/wasm/src/common/: OperationsUtils.cpp  Utils.cpp
src/nn/wasm/src/common/include/: ActivationFunctor.h  CpuOperationUtils.h  Operations.h  OperationsUtils.h  Utils.h
src/nn/wasm/src/common/operations/: Activation.cpp  Concatenation.cpp  Conv2D.cpp  DepthwiseConv2D.cpp  FullyConnected.cpp  Normalization.cpp  Pooling.cpp  Reshape.cpp  SimpleMath.cpp
test/: README.md  cts.html  cts_v2.html  index.html  mob_realmodel.html  rc-test.html  real_mobilenetv2-1.0.html  real_mobilenetv2-1.0_squeezenet1.1.html  real_squeezenet1.1.html  real_squeezenet1.1_mobilenetv2-1.0.html  realmodel-squeezenet1.1.html  squ_realmodel.html  template.html  utils.js  v2.html
workload/: README.md  index.html
(+1375 files in other folders)
